- Added user profiles (not fully finished yet) - Added fade-in and fade-out effect when exploring - Neighborhood now enablable - The header logo will take on color of logged in user - FDL tweaks

--- a/AfantazieWeb/src/style/thoughtViewer.css
+++ b/AfantazieWeb/src/style/thoughtViewer.css
@@ -71,7 +71,11 @@
         flex: 0 0 none;
         .thought-viewer-author {
             padding: 4px;
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
         }
+
     
         .thought-viewer-date {
             color: var(--white-color-dark);
