--- a/AfantazieWeb/src/style/createThought.css
+++ b/AfantazieWeb/src/style/createThought.css
@@ -1,7 +1,7 @@
 .new-thought-form {
-    background-color: var(--black-color-light);
+    /* background-color: var(--black-color-light); */
+    border: 1px solid white;
     padding: 8px;
-    border-radius: 10px;
     display: flex;
     flex-direction: column;
     min-height: 90vh;
@@ -14,6 +14,12 @@
         align-items: center;
         margin-bottom: 10px;
         margin-right: 20px;
+        
+        h1 {
+            margin-top: 0px;
+            color: var(--white-color);
+            font-size: larger;
+        }
 
         .tutorial-button {
             font-size: medium;
@@ -21,10 +27,6 @@
         }
     }
 
-    h1 {
-        margin-top: 0px;
-        color: var(--white-color);
-    }
 
     .alert {
         color: var(--primary-color-lighter);
@@ -42,25 +44,40 @@
         .character-limit {
             color: gray;
         }
+        .title-and-shape {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 10px;
+
+            .shape-select {
+                background-color: #101010;
+                color: white;
+                border: 1px solid white;
+                padding: 5px;
+                font-size: 1em;
+                width: 50px;
+            }
+        }
 
         .title-input {
             width: 100%;
-            background-color: var(--black-color);
+            background-color: #101010;
             color: white;
-            border: 0;
-            border-radius: 5px;
+            border: 1px solid white;
+            padding: 5px;
             font-size: 1em;
         }
 
         .content-input {
             width: 100%;
-            background-color: var(--black-color);
+            background-color: #101010;
             color: white;
-            border: 0;
-            border-radius: 5px;
+            border: 1px solid white;
             font-size: 1em;
             /* height: 400px; */
             min-height: 200px;
+            padding: 5px;
             resize: none;
             text-align: left;
         }
@@ -120,7 +137,6 @@
     background-color: var(--black-color-light);
     color: var(--white-color);
     border: 0;
-    border-radius: 5px;
     font-size: medium;
     padding: 5px;
     width: 100%;
@@ -136,7 +152,6 @@
     background-color: var(--black-color-light);
     color: var(--white-color);
     border: 0;
-    /* border-radius: 5px; */
     border: 1px solid;
     font-size: medium;
     padding: 5px;
@@ -154,7 +169,6 @@
     background-color: var(--primary-color-dark);
     color: var(--white-color);
     border: 0;
-    border-radius: 5px;
     font-size: medium;
     padding: 5px;
     text-align: left;
@@ -199,7 +213,6 @@
         background-color: var(--black-color);
         color: var(--white-color);
         border: 1px solid;
-        border-radius: 5px;
         font-size: medium;
         padding: 5px;
         text-align: left;
@@ -217,8 +230,6 @@
         font-size: small;
         font-weight: bold;
 
-
-        border-radius: 0.5rem;
         border: none;
         cursor: pointer;
         transition: background-color 0.3s;
