--- a/AfantazieWeb/src/style/graphControls.css
+++ b/AfantazieWeb/src/style/graphControls.css
@@ -49,7 +49,7 @@
             }
         }
 
-        
+
         .temporal-controls-button-active {
             background-color: white;
         }
@@ -60,6 +60,9 @@
         color: white;
         border: white 1px solid;
         background-color: black;
+        width: 250px;
+        z-index: 2000;
+
         label {
             .settings-window-checkbox {
                 /* background-color: black;
@@ -67,21 +70,32 @@
             }
         }
 
-        .settings-window-top-bar{
-            text-align: right;
-            button{
+        .settings-window-top-bar {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-bottom: 10px;
+
+            .settings-window-close-button {
                 background-color: black;
                 color: white;
                 border: 1px solid white;
                 cursor: pointer;
                 font-weight: bold;
-                font-size: large    ;
+                font-size: large;
+            }
+
+            .settings-window-reset-default-button {
+                background-color: black;
+                color: white;
+                border: 1px solid white;
+                cursor: pointer;
             }
         }
     }
 
     .settings-window-collapsed {
-        display: none;  
+        display: none;
     }
 }
 
