--- a/AfantazieWeb/src/style/settings.css
+++ b/AfantazieWeb/src/style/settings.css
@@ -55,14 +55,17 @@
         outline-style: solid;
     }
 
-    .max-thoughts-input{
+    .settings-bio-input{
         background-color: var(--black-color);
         color: white;
         border: 0;
         font-size: 1em;
         margin: 10px;
+        padding: 10px;
+        width: 80%;
+        min-height: 90px;
     }
-    .max-thoughts-input:focus {
+    .settings-bio-input:focus {
         outline-color: var(--primary-color);
         outline-style: solid;
     }
