--- a/aphantasia_web/src/styles/components/splitUI.module.css
+++ b/aphantasia_web/src/styles/components/splitUI.module.css
@@ -41,7 +41,7 @@
     touch-action: none;
 }
 
-.handle_port::before {
+.handle_child_port {
     content: "━━━";
     font-weight: bold;
     position: absolute;
@@ -55,7 +55,7 @@
     background: inherit;
     z-index: -1;
     background-color: var(--color-background-secondary);
-    border: 1px solid white;
+    border: 2px solid;
     border-bottom: none;
 }
 
@@ -72,7 +72,7 @@
     touch-action: none;
 }
 
-.handle_land::before {
+.handle_child_land {
     content: "┃\A┃\A┃";
     white-space: pre;
     line-height: 1;
@@ -88,7 +88,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.7);
-    border: 1px solid white
+    border: 2px solid
 }
 
 .handle_left {
