--- a/aphantasia_web/src/styles/components/holisticUI.module.css
+++ b/aphantasia_web/src/styles/components/holisticUI.module.css
@@ -1,11 +1,18 @@
 .application_container {
-    padding: 1px;
+    /* padding: 1px; */
     background-color: #0f0f0f;
     height: 100dvh;
-    width: 100dvw;
 }
 
 .graph_container {
+    height: 100%;
+}
+
+.grafika_container {
+    z-index: var(--z-graph);
+    position: relative;
+    top: 0;
+    bottom: 0;
     height: 100%;
 }
 
@@ -17,6 +24,18 @@
 .top_bar {
     height: var(--top-bar-height);
     display: flex;
+    width: 100%;
+    transition: height 1s ease, position 1s ease;
+
+}
+
+.top_bar_hidden {
+    height: 0;
+}
+
+.top_bar_hidden * {
+    height: 0;
+    border: none !important;
 }
 
 .top_bar_flex_child_first {
@@ -24,7 +43,10 @@
 }
 
 .top_bar_flex_child_second {
-    flex:1;
+    flex: 1;
+    flex: 1 1 0;
+    min-width: 0;
+
 }
 
 .bottom_bar {
