--- a/aphantasia_web/src/styles/components/splitUI.module.css
+++ b/aphantasia_web/src/styles/components/splitUI.module.css
@@ -1,9 +1,16 @@
 .split_ui_container {
     width: 100%;
-    height: 100%;
+    height: calc(100% - var(--top-bar-height));
     display: flex;
     flex-direction: column;
     overflow: hidden;
+
+    transition: height 1s ease;
+}
+
+.split_ui_container_welcome {
+    width: 100%;
+    height: 100%;
 }
 
 .split_ui_container_land {
